# SDL_Sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt
sandbox/hello_world/: main.cpp
sandbox/sprites/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Engine.cpp  Engine.hpp  Sprite.cpp  Sprite.hpp
